# reddit-model

./: .envrc  .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
data/: comments_unlabelled.parquet  doccano_annotated.jsonl
logs/seed_42/version_{'wnut_17'}/: metrics.csv
src/: train.py
src/common/: utils.py
src/pl_data/: conll_dataset.py  datamodule.py  jsonl_dataset.py  test_dataset.py
src/pl_metric/: seqeval_f1.py
src/pl_module/: ger_model.py
